--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.9.2",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1"
