--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
