dB _env Updated

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 APP_URL = https://dms-jade.vercel.app
+DB_URL = mongodb+srv://promarkdatabase:promarkdatabase%401234@promarkdb.zfwjisc.mongodb.net/DMS_Data
